2009-05-14	The InnoDB Team

	* handler/ha_innodb.cc, include/srv0srv.h,
	mysql-test/innodb_bug42101-nonzero-master.opt,
	mysql-test/innodb_bug42101-nonzero.result,
	mysql-test/innodb_bug42101-nonzero.test,
	mysql-test/innodb_bug42101.result, mysql-test/innodb_bug42101.test,
	srv/srv0srv.c:
	Fix Bug#42101 Race condition in innodb_commit_concurrency

2009-05-13	The InnoDB Team

	* dict/dict0dict.c:
	Fix Bug#44320 InnoDB: missing DB_ROLL_PTR in Table Monitor COLUMNS
	output

2009-04-23	The InnoDB Team

	* row/row0mysql.c:
	When scanning indexes, report in the error log any error codes
	returned by the search function.  These error codes will still be
	ignored in CHECK TABLE.

2009-04-23	The InnoDB Team

	* include/trx0types.h:
	Define the logical type names trx_id_t, roll_ptr_t, and undo_no_t
	and use them in place of dulint everywhere.

2009-04-18	The InnoDB Team

	* handler/ha_innodb.cc, include/pars0pars.h:
	Fix Bug#29125 Windows Server X64: so many compiler warnings

2009-04-16	The InnoDB Team

	* include/univ.i:
	Define REFMAN as the base URL of the MySQL Reference Manual and
	use the macro in all diagnostic output.

2009-04-16	The InnoDB Team

	* CMakeLists.txt, include/os0sync.h, include/sync0sync.h,
	include/sync0sync.ic, include/univ.i, srv/srv0start.c,
	sync/sync0sync.c:
	Use the Windows Interlocked functions for atomic memory
	access.

2009-04-15	The InnoDB Team

	* mysql-test/innodb.result, mysql-test/innodb.test:
	Fix Bug#43309 Test main.innodb can't be run twice

2009-04-14	The InnoDB Team

	* CMakeLists.txt, handler/win_delay_loader.cc,
	win-plugin/win-plugin.diff:
	Remove statically linked libraries from MySQL (zlib and strings).

2009-04-11	The InnoDB Team

	* CMakeLists.txt, win-plugin/README, win-plugin/win-plugin.diff:
	Rewrite CMakeLists.txt.

2009-04-07	The InnoDB Team

	* include/os0sync.h, include/sync0rw.ic, include/sync0sync.h,
	include/sync0sync.ic, include/univ.i, plug.in, srv/srv0srv.c,
	srv/srv0start.c, sync/sync0arr.c, sync/sync0sync.c: